[metadata]
name = exit
version = 2018.11.19
url = https://github.com/looking-for-a-job/exit.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = exit termination

[options]
install_requires = 
	public
	setuptools
packages = 
	exit
